QS: Navigation Bar tile crvs: adapt for 10
Change-Id: I082876b26945facbbbc06d1175964267e4c05152
Signed-off-by: mydongistiny <jaysonedson@gmail.com>
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/packages/SystemUI/res/values/du_strings.xml
+++ b/packages/SystemUI/res/values/du_strings.xml
@@ -198,4 +198,8 @@
     <string name="accessibility_quick_settings_hwkeys_off">HW keys off</string>
     <string name="quick_settings_hwkeys_label">HW Keys</string>
 
+    <!-- NavBar QS Tile -->
+    <string name="quick_settings_navbar_title">Navigation Bar</string>
+    <string name="accessibility_quick_settings_navbar_changed_off">Navigation bar turned off</string>
+    <string name="accessibility_quick_settings_navbar_changed_on">Navigation bar turned on</string>
 </resources>
