base: SystemUI: add VPN to the icon blacklist in tuner
Change-Id: I579d1ec7a6d66ac7055cce7d7e905bae7dc5cd9a

--- a/packages/SystemUI/res/values/du_strings.xml
+++ b/packages/SystemUI/res/values/du_strings.xml
@@ -45,6 +45,7 @@
 
     <!-- Tuner -->
     <string name="statusbar_items_title">Statusbar icon</string>
+    <string name="quick_settings_vpn_title">VPN</string>
 
     <!-- Sync Tile -->
     <string name="quick_settings_sync_label">Sync</string>
