--- a/packages/SystemUI/res/xml/statusbar_items.xml
+++ b/packages/SystemUI/res/xml/statusbar_items.xml
@@ -70,4 +70,8 @@
         android:key="zen"
         android:title="@string/quick_settings_dnd_label" />
 
+    <com.android.systemui.tuner.StatusBarSwitch
+        android:key="vpn"
+        android:title="@string/quick_settings_vpn_title" />
+
 </PreferenceScreen>
