--- a/packages/SystemUI/res/values/du_strings.xml
+++ b/packages/SystemUI/res/values/du_strings.xml
@@ -113,6 +113,9 @@
     <string name="qs_data_switch_changed_1">Using SIM 1 for Mobile data</string>
     <string name="qs_data_switch_changed_2">Using SIM 2 for Mobile data</string>
 
+    <!-- SystemUI tuner -->
+    <string name="systemui_tuner_navbar_title">Stock navbar</string>
+
     <!-- Theme tile -->
     <string name="system_theme_style_title">Theme</string>
     <string name="system_theme_style_light">Light</string>
