--- a/packages/SystemUI/res/values/du_config.xml
+++ b/packages/SystemUI/res/values/du_config.xml
@@ -52,4 +52,7 @@
     <!-- Whether the binned brightness sensor reports a value of 0 on proximity
          near events -->
     <bool name="doze_brightness_sensor_reports_proximity" translatable="false">true</bool>
+
+    <!-- Whether to use the mask for the quicksettings icons-->
+    <bool name="config_useMaskForQs">true</bool>
 </resources>
