pocket: introduce pocket bridge
This service communicates pocket state to the pocket judge kernel driver.
It maintains the pocket state by binding to the pocket service.

Ticket: NOUGAT-49

Change-Id: Iee77f767f23d3f77a0d1d871f9305f3b3c6d6630
Signed-off-by: Chris Lahaye <dev@chrislahaye.com>
Signed-off-by: Alex Naidis <alex.naidis@linux.com>
Signed-off-by: ZeNiXxX <zenixxx.havoc@gmail.com>

--- a/core/res/res/values/du_config.xml
+++ b/core/res/res/values/du_config.xml
@@ -268,4 +268,8 @@
     <!-- Full screen aspect ratio -->
     <bool name="config_haveHigherAspectRatioScreen">false</bool>
     <item name="config_screenAspectRatio" format="float" type="dimen">2.1</item>
+
+    <!-- Defines the sysfs attribute path used by pocket bridge
+         to communicate pocket state to the pocket judge kernel driver. -->
+    <string name="config_pocketBridgeSysfsInpocket"></string>
 </resources>
