--- a/packages/SystemUI/res/values/du_dimens.xml
+++ b/packages/SystemUI/res/values/du_dimens.xml
@@ -17,6 +17,7 @@
     <!-- Network traffic monitor -->
     <dimen name="net_traffic_multi_text_size">8dp</dimen>
     <dimen name="net_traffic_txt_img_padding">4dp</dimen>
+    <dimen name="net_traffic_single_text_size">14dp</dimen>
 
     <dimen name="screenrecord_dot_size">48dp</dimen>
 
