--- a/packages/SystemUI/res/values/du_colors.xml
+++ b/packages/SystemUI/res/values/du_colors.xml
@@ -67,5 +67,6 @@
     <color name="brightness_slider_progress">#FFFFFF</color>
     <color name="brightness_slider_background">#99FFFFFF</color>
     <color name="brightness_slider_icons">#00FFFFFF</color>
+    <color name="qs_drag_handle_color">#66e5e5e5</color>
 </resources>
 
