Add config to use base rounded corner radius for window animation
Change-Id: I775a1f19caf12a5a3342327643393a8e0bff697d

--- a/core/res/res/values/du_config.xml
+++ b/core/res/res/values/du_config.xml
@@ -262,4 +262,8 @@
     <!-- Button brightness -->
     <bool name="config_button_brightness_support">false</bool>
     <integer name="config_button_brightness_default">128</integer>
+
+     <!-- Whether to use base rounded corner radius for window animations instead
+          of min between top and bottom radius-->
+    <bool name="config_useDefaultRoundedCornerRadius">false</bool>
 </resources>
